call cython directly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ set(Python_FIND_STRATEGY LOCATION)
 find_package(Python3 COMPONENTS Interpreter Development NumPy)
 
 add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/_pyairsea.c
-  COMMAND ${Python3_EXECUTABLE} -m cython _pyairsea.pyx
+  COMMAND cython _pyairsea.pyx
   MAIN_DEPENDENCY _pyairsea.pyx
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
