--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 61.0.0", "wheel", "numpy", "cython"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pyairsea"
+name = "awex"
 version = "0.1.1"
 authors = [
   {name = "Jorn Bruggeman", email = "jorn@bolding-bruggeman.com"},
