--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,11 @@ jobs:
         with:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
+          channels: conda-forge
       - name: Install
         run: pip install -v .
       - name: Run notebooks
         run: |
-          conda install -c conda-forge ipython jupyterlab ipympl matplotlib-base
+          conda install -c conda-forge ipython jupyterlab ipympl
           cd examples
           ipython --gui tk -c "%run formulations.ipynb"
