--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,9 @@ jobs:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
           channels: conda-forge
+      - name: Install numpy
+        run: |
+          conda install -c conda-forge numpy
       - name: Install
         run: pip install -v .
       - name: Run notebooks
