--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,11 +18,14 @@ jobs:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
           channels: conda-forge
+          conda-remove-defaults: "true"
       - name: Install numpy
         run: |
           conda install -c conda-forge numpy
       - name: Install
         run: pip install -v .
+      - name: Test import
+        run: python -c "import awex"
       - name: Run notebooks
         run: |
           conda install -c conda-forge ipython jupyterlab ipympl
