--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,9 @@ jobs:
       - name: Install
         run: pip install -v .
       - name: Test import
-        run: python -c "import awex"
+        run: |
+          cd examples
+          python -c "import awex"  # do not try this at repo root, as the awex subdir confuses python
       - name: Run notebooks
         run: |
           conda install -c conda-forge ipython jupyterlab ipympl
